# urrobot_teleop

./: .gitignore  CMakeLists.txt  README.md
ControlBox/: CMakeLists.txt  README.md  SConscript  SConstruct  send_program.sh
ControlBox/src/: Button.h  BytesBuffer.cpp  BytesBuffer.h  ConioLinux.cpp  ConioLinux.h  LoopInterface.cpp  LoopInterface.h  PacketJointTargetPos.h  PacketManager.cpp  PacketManager.h  PacketTypes.h  PacketURConfigCommands.h  PacketURState.cpp  PacketURState.h  PreciseClock.cpp  PreciseClock.h  SerializablePacket.cpp  SerializablePacket.h  SocketInterface.cpp  SocketInterface.h  TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h  URRobotInterface.cpp  URRobotInterface.h  URRobotJointPControl.cpp  URRobotJointPControl.h  URState.h  VelocityPControl.h  main_JointPControl.cpp
ControlBox/src/fake/: Configuration_fake.h  robotinterface_fake.h
ControlBox/test/: PacketQuit.h  PacketStringMessage.h  TestBytesBuffer.cpp  TestJointPControl.cpp  TestPacketManagerReceiver.cpp  TestPacketManagerSender.cpp  TestTCPClient.cpp  TestTCPServer.cpp
ControlBox/ur-c-api-1.8/: performance_test.h  ur5_util.h  ur_kin.cpp  ur_kin.h
OperatorPC/: CMakeLists.txt  TCPClient.h  TCPServer.h  comm_test.cpp  main.cpp  ur5_messages.h
OperatorPC/kinematics/: RobotKinematics.cpp  RobotKinematics.h  RobotKinematicsModel.h
OperatorPC/teleop/interface/: ConstrainedModeInterface.h  FrictionMode.h  RateModeInteface.h
OperatorPC/teleop/omega6/: Omega6DeltaPosCommander.cpp  Omega6DeltaPosCommander.h  Omega6Interface.cpp  Omega6Interface.h  Omega6VelocityCommander.cpp  Omega6VelocityCommander.h
